# cv-rs

./: .gitignore  .rtx.toml  Cargo.toml  Dioxus.toml  Makefile.toml  README.md  rustfmt.toml
public/: manifest.webmanifest  style.css
src/: main.rs
src/core/: mod.rs
src/core/uikit/: mod.rs
src/core/uikit/atoms/: badge.rs  link.rs  mod.rs
src/entities/: mod.rs
src/entities/expert/: mocks.rs  mod.rs  model.rs  service.rs
src/entities/expert/gui/: experience.rs  headline.rs  mod.rs  position.rs  skillset.rs  summary.rs
src/screens/: mod.rs  start.rs
src/widgets/: mod.rs
src/widgets/app/: layout.rs  mod.rs  navigation.rs
